--- a/.gitignore
+++ b/.gitignore
@@ -152,4 +152,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 almondo-venv/
-results/
+model/results/
+data/
