--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,6 @@ Repository = "https://github.com/ALMONDO-Project/ALMONDO-Model"
 [tool.setuptools.packages.find]
 # This tells setuptools to look for packages under the 'src' directory
 # and include 'my_awesome_package' (and its subpackages like 'my_awesome_package.utils')
-# find = {where = ["src"]}
+find = {where = ["src/almondo-model"]}
 # where = ["model"]
 include = ["model*"]
